# spexor-client

./: Function_List_UserFlow.md  GEMINI.md  README.md  SPEXOR_UI_Improvements.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-01-30-000001_create_cases/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000002_create_speakers/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000003_create_audio_files/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000004_create_transcript_segments/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000005_create_alert_words/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000006_create_replacement_words/: down.sql  up.sql
src-tauri/migrations/2026-01-30-000007_create_users/: up.sql
src-tauri/migrations/2026-01-30-000008_create_notifications/: up.sql
src-tauri/migrations/2026-01-30-000009_create_activity_logs/: up.sql
src-tauri/migrations/2026-01-30-000010_create_voice_samples/: down.sql  up.sql
src-tauri/migrations/2026-02-02-000001_add_auth_fields/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/commands/: activity_logs.rs  audio.rs  auth.rs  cases.rs  greet.rs  mod.rs  notifications.rs  speakers.rs  transcript.rs  users.rs  vocabulary.rs
src-tauri/src/models/: activity_log.rs  alert_word.rs  audio_file.rs  case.rs  mod.rs  notification.rs  replacement_word.rs  speaker.rs  transcript_segment.rs  user.rs  voice_sample.rs
src-tauri/src/services/: auth_service.rs  (+2 more)
(+195 files in other folders)
